# ms-lims

./: .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  pyproject.toml
.claude/commands/: guided-implement.md
.claude/skills/guided-implement/: SKILL.md
.claude/skills/guided-implement/references/: code-review-checklist.md  django-concepts.md  pedagogy.md  project-context.md  python-concepts.md  session-state.md
.claude/skills/guided-implement/templates/: learning-state.md  review-report.md  task-briefing.md
.claude/skills/guided-implement/workflows/: concept-lookup.md  phase-recap.md  start-session.md  teach-task.md
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
config/: settings.py
docs/decisions/: constitution_prompt.md  ms-lims-requirements.md  ms-lims-tech-stack-referenz-v2.md
docs/phases/: phase-01-python-tooling-und-umgebung.md  phase-02-django-fundamentals.md
parties/: admin.py  apps.py  managers.py  models.py
parties/fixtures/: internal_lab.json
parties/migrations/: 0001_initial.py  0002_seed_internal_lab.py
specs/001-parties-master-data/: .learning-state.md  concepts-mindmap.html  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-parties-master-data/checklists/: requirements.md
specs/001-parties-master-data/contracts/: parties-api.md
tests/: test_bootstrap.py
tests/parties/: conftest.py  factories.py  test_admin.py  test_managers.py  test_models.py  test_seed.py
